--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+
+    <script
+      src="https://kit.fontawesome.com/668ec2b9cb.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700"
       rel="stylesheet"
@@ -22,11 +27,43 @@
     <title>Grand Hotel</title>
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe est
-      reiciendis culpa doloremque exercitationem, sed maxime nam aliquid
-      possimus aperiam repudiandae eveniet? Ipsam nam perspiciatis beatae
-      possimus esse saepe aperiam!
-    </p>
+    <!-- navbar -->
+    <div class="navbar">
+      <!-- sidebar -->
+      <div class="sidebar">
+        <div class="menu-icon">
+          <div class="line line-1"></div>
+          <div class="line line-2"></div>
+          <div class="line line-3"></div>
+        </div>
+        <ul class="social-icons-list">
+          <li>
+            <a href="#" class="social-link"
+              ><i class="fa-brands fa-square-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#" class="social-link"
+              ><i class="fa-brands fa-square-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#" class="social-link">
+              <i class="fa-brands fa-google-plus-g"></i
+            ></a>
+          </li>
+          <li>
+            <a href="#" class="social-link"
+              ><i class="fa-brands fa-square-instagram"></i
+            ></a>
+          </li>
+        </ul>
+        <div class="year">
+          <p>2018</p>
+        </div>
+      </div>
+      <!-- end of sidebar -->
+    </div>
+    <!--  end of navbar-->
   </body>
 </html>
