--- a/index.html
+++ b/index.html
@@ -58,11 +58,50 @@
             ></a>
           </li>
         </ul>
-        <div class="year">
-          <p>2018</p>
+        <div>
+          <p class="year">2018</p>
         </div>
       </div>
       <!-- end of sidebar -->
+
+      <!-- navigation -->
+      <nav class="navigation">
+        <div class="navigation-heading">
+          <h1>Grand Hotel</h1>
+          <form class="navigation-search">
+            <input class="navigation-search-input" placeholder="Search..." />
+            <button class="navigation-search-btn">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+        </div>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Home</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">About Us</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Rooms</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Events</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Customers</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Content</a>
+          </li>
+        </ul>
+        <div>
+          <p class="copyright">
+            &copy; 2018. Grand Hotel. All Rights Reserved.
+          </p>
+        </div>
+      </nav>
+      <!-- end of navigation -->
     </div>
     <!--  end of navbar-->
   </body>
